size(), isEmpty() and clear() methods fixed, new tests: size changes if hash code is the same"